# ollama_sandbox

./: README.md  pyproject.toml
example/: chat.py  chat_llama3_1.py  chunk_text.py  convert_pdf2image.py  create_embeddings.py  generate_emeddings.py  get_nearest_chunk.py  langchain_prompt_template.py  ocr_imgs.py
notebooks/: chunk_embedding_eda.ipynb
src/: retrieval.py  splitters.py
